--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://rajivharlalka.me"
+base_url = ""
 
 title = "Hardik"
 description = "Minimalism | Pensive | Tennis"
